appId: host.exp.Exponent
---
- tapOn: "e.g. 165"
- inputText: "142"
- tapOn:
    point: "50%,15%"
- waitForAnimationToEnd:
    timeout: 1000
- tapOn: "e.g. 5"
- inputText: "5"
- tapOn:
    point: "50%,15%"
- waitForAnimationToEnd:
    timeout: 1000
- tapOn: "e.g. 7"
- inputText: "3"
- tapOn:
    point: "50%,15%"
- waitForAnimationToEnd:
    timeout: 1000
- tapOn: "e.g. 30"
- inputText: "34"
- tapOn:
    point: "50%,15%"
- waitForAnimationToEnd:
    timeout: 1000
- tapOn: "Female"
- takeScreenshot: "/Users/arafrahman/Fuel-Good/tasks/persona-month-qa-2026-07-10/captures/ob-12-body-filled"
